[project]
name = "kruipeding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "html5lib>=1.1",
    "pydantic>=2.11.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    "sqlmodel>=0.0.24",
]
